Add token
