# src/token/dto/update-token.dto.ts
@@ -1,0 +1,7 @@
+import { OmitType } from "@nestjs/swagger";
+import { CreateTokenDto } from "./create-token.dto";
+
+export class UpdateTokenDto extends OmitType(
+  CreateTokenDto,
+  [] as const,
+) {}
